grammar.js
    document: $ => repeat($._text_mode),

    inline_verbatim: $ => seq(
      $.verb_cs,
      $.verb_delim,
      $.verb_body,
      $.verb_delim
    ),

    _text_mode: $ => choice(
      $._common,
      // Underscore produces an error by default in LaTeX text mode. Some
      // some package define underscore to produce \tex­tun­der­score. We assume
      // that this has been done since underscore is never actually subscript
      // in text mode.
      alias($.subscript, 'text'),
      alias($.superscript, 'text'),
      $.verbatim_env,
      $.inline_verbatim,
      $._display_math,
      $._inline_math,
      $.text_env,
      $.text_group,
      prec(-1, alias($.lbrack, 'text')),
      prec(-1, alias($.rbrack, 'text')),
      $.emph,
      $.textrm,
      $.textsf,
      $.texttt,
      $.textmd,
      $.textbf,
      $.textup,
      $.textit,
      $.textsl,
      $.textsc,
      $.providesexplclass,
      $.providesexplfile,
      $.providesexplpackage,
      $.documentclass,
      $.documentstyle,
      $.section,
      $.usepackage,
      $.footnote,
      // hyperref package
      $.href,
      $.url,
      $.hyperbaseurl,
      $.hyperimage,
      $.hyperref
    ),

    // text_mode: $ => repeat1($._text_mode),

    _math_mode: $ => choice(
      $._common,
      $.subscript,
      $.superscript,
      $.math_env,
      $.math_group,
      prec(-1, alias($.lbrack, 'text')),
      prec(-1, alias($.rbrack, 'text')),
      $.mathrm,
      $.mathnormal,
      $.mathcal,
      $.mathbf,
      $.mathsf,
      $.mathtt,
      $.mathit,
      $.tag
    ),

    // math_mode: $ => repeat1($._math_mode),

    tex_display_math: $ => seq(
      $.math_shift, $.math_shift,
      repeat($._math_mode),
      $.math_shift, $.math_shift
    ),

    latex_display_math: $ => seq(
      $.begin_display_math,
      repeat1($._math_mode),
      $.end_display_math
    ),

    begin_display_math: $ => seq($._escape, '['),

    end_display_math: $ => prec(-3, seq($._escape, ']')),

    display_math_env: $ => seq(
      $.display_math_begin,
      repeat1($._math_mode),
      $.display_math_end
    ),

    display_math_begin: $ => begin_cmd($,
      $.display_math_env_group,
      optional($.text_brack_group),
      optional($.text_group),
      $.eol
    ),

    display_math_end: $ => prec(-3, end_cmd($,
      $.display_math_env_group
    )),

    display_math_env_group: $ => group($, $.display_math_env_name),

    display_math_env_name: $ => /(displaymath|eqnarray\*?|align\*?|alignat\*?|equation\*?|flalign\*?|gather\*?|multiline\*?|split\*?|dmath\*?|dseries\*?|dgroup\*?|darray\*?)/,

    verbatim_env: $ => seq(
      $.verbatim_begin,
      optional($.verbatim_text),
      $.verbatim_end
    ),

    verbatim_begin: $ => begin_cmd($,
      $.verbatim_env_group,
      optional($.text_brack_group),
      optional($.text_group),
      $.eol
    ),

    verbatim_end: $ => end_cmd($,
      $.verbatim_env_group
    ),

    verbatim_text: $ => repeat1($._verb_line),

    verbatim_env_group: $ => group($, $.verbatim_env_name),

    verbatim_env_name: $ => /(verbatim|[BL]?Verbatim\*?|lstlisting|minted|alltt)/,

    dimension: $ => seq(
      optional($.fixed),
      choice(
        $.unit,
        $.box_dimension_ref,
        $.dimension_cs,
        $.cs
      )
    ),

    // TeX character functions

    text_group: $ => group($, repeat($._text_mode)),

    text: $ => prec.left(-1,repeat1(/[^\]\[]/)),

    cs: $ => cs($, repeat1(/./)),

    escaped: $ => seq($._escape, $._non_letter_or_other),

    // fi introduced by LuaTeX
    unit: $ => /bp|cc|cm|dd|em|ex|fil{0,3}|in|mm|mu|nc|nd|pc|pt|sp/,

    fixed: $ => /[+-]?([0-9]+(\.[0-9]*)?|[0-9]\.[0-9]+)/,
