corpus/display_math.txt
=============
TeX display math
=============
foo$$bar$$quux
-------------
(document
  (text_mode
    (text)
    (tex_display_math
      (math_shift)
      (math_shift)
      (math_mode (text))
      (math_shift)
      (math_shift))
    (text)))

=============
TeX unclosed display math
=============
foo { $$ bar \} foo } quux
-------------

(document
  (text_mode (text)
  (text_group
    (begin_group)
    (text)
    (tex_display_math
      (math_shift) (math_shift)
      (math_mode (text) (escaped) (text))
      (implicit_math_shift))
    (end_group))
  (text)))

==================
LaTeX display math
==================
foo\[bar\]quux
-------------
(document
  (text_mode
    (text)
    (latex_display_math
      (begin_display_math)
      (math_mode (text))
      (end_display_math))
    (text)))

=======================
LaTeX displaymath environment
=======================
foo
\begin{displaymath}
bar
\end{displaymath}
quux
-----------------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
LaTeX eqnarray environment
=============
foo
\begin{eqnarray}
bar
\end{eqnarray}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
LaTeX eqnarray* environment
=============
foo
\begin{eqnarray*}
bar
\end{eqnarray*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath align environment
=============
foo
\begin{align}
bar
\end{align}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath align* environment
=============
foo
\begin{align*}
bar
\end{align*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath alignat environment
=============
foo
\begin{alignat}{2}
bar
\end{alignat}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin
        (begin_token)
        (display_math_env_group (begin_group) (display_math_env_name) (end_group))
        (text_group (begin_group) (text) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath alignat* environment
=============
foo
\begin{alignat*}{2}
bar
\end{alignat*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
    (display_math_begin
      (begin_token)
      (display_math_env_group (begin_group) (display_math_env_name) (end_group))
      (text_group (begin_group) (text) (end_group)))
    (math_mode (text))
    (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
  (text)))

=============
amsmath equation environment
=============
foo
\begin{equation}
bar
\end{equation}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath equation* environment
=============
foo
\begin{equation*}
bar
\end{equation*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath flalign environment
=============
foo
\begin{flalign}
bar
\end{flalign}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath flalign* environment
=============
foo
\begin{flalign*}
bar
\end{flalign*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath gather environment
=============
foo
\begin{gather}
bar
\end{gather}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath gather* environment
=============
foo
\begin{gather*}
bar
\end{gather*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath multiline environment
=============
foo
\begin{multiline}
bar
\end{multiline}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath multiline* environment
=============
foo
\begin{multiline*}
bar
\end{multiline*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath split environment
=============
foo
\begin{split}
bar
\end{split}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=============
amsmath split* environment
=============
foo
\begin{split*}
bar
\end{split*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=========================
breqn dmath environment
=========================
foo
\begin{dmath}
bar
\end{dmath}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

==========================
breqn dmath* environment
==========================
foo
\begin{dmath*}
bar
\end{dmath*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=========================
breqn dseries environment
=========================
foo
\begin{dseries}
bar
\end{dseries}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

==========================
breqn dseries* environment
==========================
foo
\begin{dseries*}
bar
\end{dseries*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=========================
breqn dgroup environment
=========================
foo
\begin{dgroup}
bar
\end{dgroup}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

==========================
breqn group* environment
==========================
foo
\begin{dgroup*}
bar
\end{dgroup*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

=========================
breqn darray environment
=========================
foo
\begin{darray}
bar
\end{darray}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))

==========================
breqn darray* environment
==========================
foo
\begin{darray*}
bar
\end{darray*}
quux
-------------
(document
  (text_mode
    (text)
    (display_math_env
      (display_math_begin (begin_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group)))
      (math_mode (text))
      (display_math_end (end_token) (display_math_env_group (begin_group) (display_math_env_name) (end_group))))
    (text)))
