corpus/verbatim.txt
======================
verbatim environment
======================
foo
\begin{verbatim}
bar
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
Verbatim environment
===========================
foo
\begin{Verbatim}
bar
\end{Verbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
Verbatim star environment
===========================
foo
\begin{Verbatim*}
bar
\end{Verbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
BVerbatim environment
===========================
foo
\begin{BVerbatim}
bar
\end{BVerbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
BVerbatim star environment
===========================
foo
\begin{BVerbatim*}
bar
\end{BVerbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
LVerbatim environment
===========================
foo
\begin{LVerbatim}
bar
\end{LVerbatim}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
LVerbatim star environment
===========================
foo
\begin{LVerbatim*}
bar
\end{LVerbatim*}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
lstlisting environment
===========================
foo
\begin{lstlisting}
bar
\end{lstlisting}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
lstlisting environment with optional argument
===========================
foo
\begin{lstlisting}[wibble]
bar
\end{lstlisting}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin
        (begin_token)
        (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))
        (opt_text_group (begin_opt) (text) (end_opt)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

===========================
minted environment
===========================
foo
\begin{minted}{wibble}
bar
\end{minted}
quux
---------------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin
        (begin_token)
        (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))
        (text_group (begin_group) (text) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

======================
empty verbatim environment
======================
foo
\begin{verbatim}
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

======================
multiline verbatim environment
======================
foo
\begin{verbatim}
bar
wibble
\end{verbatim}
quux
----------------------
(document
  (text_mode
    (text)
    (verbatim_env
      (verbatim_begin (begin_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group)))
      (verbatim_text)
      (verbatim_end (end_token) (verbatim_env_group (begin_group) (verbatim_env_name) (end_group))))
    (text)))

======================
inline verbatim
======================
text
\verb+foo+bar
\verb\foo\bar
\verb+foo
\verb*starred verb* is not what you expect (s is acting as the delim here)
text
----------------------
(document
  (text_mode
    (text)
    (inline_verbatim (verb_token) (verb_delim) (verb_body) (verb_delim)) (text)
    (inline_verbatim (verb_token) (verb_delim) (verb_body) (verb_delim)) (text)
    (inline_verbatim (verb_token) (verb_delim) (verb_body) (verb_delim)) (text)
    (inline_verbatim (verb_token) (verb_delim) (verb_body) (verb_delim)) (text)))

======================
not (quite) inline verbatim
======================
\verb  +foo+ the space here is the actual delim, so +foo+ is plain text
----------------------
(document
  (text_mode
    (inline_verbatim (verb_token) (verb_delim) (verb_body) (verb_delim)) (text)))
